--- a/index.html
+++ b/index.html
@@ -515,28 +515,28 @@
                 <p class="social-title">Social media</p>
                 <ul class="social-list foot">
                     <li class="footer-social-link">
-                        <a href="" class="footer-item">
+                        <a href="https://www.instagram.com/" class="footer-item">
                             <svg class="social-icon" width="24" height="24">
                                 <use href="./images/icons.svg#icon-instagram"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="footer-social-link">
-                        <a href="" class="footer-item">
+                        <a href="https://twitter.com/" class="footer-item">
                             <svg class="social-icon" width="24" height="24">
                                 <use href="./images/icons.svg#icon-twitter"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="footer-social-link">
-                        <a href="" class="footer-item">
+                        <a href="https://www.facebook.com/" class="footer-item">
                             <svg class="social-icon" width="24" height="24">
                                 <use href="./images/icons.svg#icon-facebook"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="footer-social-link">
-                        <a href="" class="footer-item">
+                        <a href="https://ua.linkedin.com/" class="footer-item">
                             <svg class="social-icon" width="24" height="24">
                                 <use href="./images/icons.svg#icon-linkedin"></use>
                             </svg>
